# BattleSimulator

./: .gitignore  AGENTS.md  Makefile  README.rst  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
battlesim/: __init__.py  __legacy.py  _battle.py  _mathutils.py  _utils.py
battlesim/plot/: _imageplot.py  _simplot.py
battlesim/simulation/: _ai.py  _damage.py  _hit.py  _move.py  _simulator_fast.py  _target.py
battlesim/terra/: _noise.py  _terrain.py
docs/: current-spec.md  implementation-rules.md  product-rules.md  simulation-rules.md  todo.md
tests/: test_battle.py  test_targeting.py  test_terrain.py
