[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "battlesim"
version = "0.3.7"
description = "Modelling and animating simulated battles between units in Python."
requires-python = ">=3.12"
authors = [
    {name = "Greg Parkes"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
]
keywords = ["simulation", "battle", "tabs"]
classifiers=[
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
all = [
    "tqdm>=4.67.3",
    "pytest>=9.0.2",
    "black>=26.3.1",
    "ruff>=0.15.6",
    "ty",
]
notebook = ["jupyter>=1.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["battlesim*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"
root = ["."]

[tool.ty.src]
include = ["battlesim"]
exclude = ["examples", "teaching"]

[project.urls]
Homepage = "https://github.com/gregparkes/BattleSimulator"
Changelog = "https://github.com/gregparkes/BattleSimulator/blob/master/CHANGELOG.md"

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # invalid name
    "C0209", # consider f-string
]

[tool.black]
exclude = "battlesim/__*.py"
